tests/invalid_code/unexpected_value.bs
enum MyEnum {
    a
}

fn main() {
    const x = MyEnum;
}